Add link to works#index from main page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
          <%= link_to 'View top media', root_path %>
        </li>
        <li>
-         <%= link_to "View all media", root_path%>
+         <%= link_to "View all media", works_path%>
       </li>
        <li>
          <%= link_to "Add new work", root_path%>
