Add placeholder for votes table

--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -2,4 +2,7 @@
 Created by: <%= @work.creator %><br>
 Published: <%= @work.publication_year %><br>
 
-<%= link_to "Back to media ranks", root_path %>  EDIT  UPVOTE  DELETE
+<%= link_to "Back to media ranks", root_path %>  EDIT  UPVOTE  DELETE <br>
+
+X Votes for this movie <br>
+Table of Votes goes here
