--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
          <%= link_to "View all media", works_path%>
       </li>
        <li>
-         <%= link_to "Add new work", root_path%>
+         <%= link_to "Add new work", new_work_path %>
       </li>
        <li>
          <%= link_to "View all users", root_path%>
