--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -6,7 +6,11 @@
   <body>
 
 <main>
-  <h2>Media Spotlight: <%= @media_spotlight.title %> by <%= @media_spotlight.creator %> </h2>
+  <% if @media_spotlight %>
+    <h2>Media Spotlight: <%= @media_spotlight.title %> by <%= @media_spotlight.creator %> </h2>
+  <% else %>
+    <h2>No Media Spotlight</h2>
+  <% end %>
   
   <%# MOVIES %>
   <h2>Top Movies</h2>
