Add tests for work#edit; Fill out work#edit action in the controller; Make view for editing works; Add link to edit in work details page.  All tests currently passing

--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -2,7 +2,7 @@
 Created by: <%= @work.creator %><br>
 Published: <%= @work.publication_year %><br>
 
-<%= link_to "Back to media ranks", root_path %>  EDIT  UPVOTE  DELETE <br>
+<%= link_to "Back to media ranks", root_path %>  <%= link_to "Edit", edit_work_path %>  UPVOTE  DELETE <br>
 
 X Votes for this movie <br>
 Table of Votes goes here
