--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -21,7 +21,7 @@
             Votes
           </td>
           <td>
-            <%= album.title %>
+            <%= link_to "#{album.title}", work_path(album.id) %>
           </td>
           <td>
             <%= album.creator %>
@@ -56,7 +56,7 @@
             Votes
           </td>
           <td>
-            <%= book.title %>
+            <%= link_to "#{book.title}", work_path(book.id) %>
           </td>
           <td>
             <%= book.creator %>
@@ -92,7 +92,7 @@
             Votes
           </td>
           <td>
-            <%= movie.title %>
+            <%= link_to "#{movie.title}", work_path(movie.id) %>
           </td>
           <td>
             <%= movie.creator %>
