--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
          <li>
            <%= link_to "View all users", root_path%>
          </li>
-         <li>
-           <%= link_to "Log In", root_path%>
+         <li class="btn btn-primary">
+           <%= link_to "Log In", root_path %>
          </li>
         </ul>
       </nav>
