Add padding to header; Center header text

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,9 +19,11 @@
 
 header {
     background-color: #B2DFDB;
+    padding: 32px 16px 8px;
 }
 header h1 {
     color: #FF5722;;
+    text-align: center;
 }
 
 nav {
