Change colors of header font; Add border, margins and padding

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,10 @@
   <body>
 
    <header>
-      <h1>MediaRanker</h1>
-      <h2>Ranking the Best of Everything</h2>
+      <h1>
+        <%= link_to 'Media Ranker', root_path %>
+        <span class="small">Ranking the Best of Everything</span>
+      </h1>
     
 
       <nav>
