--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,8 +22,15 @@ header {
     padding: 32px 16px 8px;
 }
 header h1 {
-    color: #FF5722;;
     text-align: center;
+    color: white;
+}
+
+header h1 a {
+    color: #FF5722;
+    padding-right: 25px;
+    margin-right: 15px;
+    border-right: white 2px solid;
 }
 
 nav {
