--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,6 +24,7 @@ header {
 header h1 {
     text-align: center;
     color: white;
+    margin: 25px 0 40px;
 }
 
 header h1 a {
@@ -37,8 +38,6 @@ nav {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    // margin-bottom: 0;
-    // grid-template-columns: 1fr 1fr;
 }
 
 nav ul {
