--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
         </ul>
         <ul class="user-nav-container">
           <li class="btn btn-primary">
-            <%= link_to "Log In", root_path %>
+            <%= link_to "Log In", login_path %>
           </li>
         </ul>
       </nav>
