--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
         <ul class="user-nav-container">
           <li class="btn btn-primary">
            <% if session[:user_id] %>
-             <%= link_to "Logout", logout_path, method: :post %>
+             <%= link_to "Log Out", logout_path, method: :post %>
            <% else %>
              <%= link_to "Log In", login_path %>
            <% end %>
