--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -4,7 +4,7 @@ Published: <%= @work.publication_year %><br>
 
 <%= link_to "Back to media ranks", root_path %>  
 <%= link_to "Edit", edit_work_path %>  
-UPVOTE  
+<%= link_to "Upvote", work_votes_path(@work.id), method: :post, class: "btn btn-primary" %>  
 <%= link_to "Delete", work_path(@work), method: :delete, data: { confirm: "Are you sure you want to delete this work?" } %> <br>
 
 X Votes for this movie <br>
