--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,11 +34,11 @@
          </li>
         </ul>
         <ul class="user-nav-container">
-          <li class="btn btn-primary">
-           <% if session[:user_id] %>
-             <%= link_to "Log Out", logout_path, method: :post %>
+          <% if session[:user_id] %>
+              <li><%= link_to "Logged in as #{User.find_by(id: session[:user_id]).username}", root_path, class: "btn btn-primary" %></li>
+             <li><%= link_to "Log Out", logout_path(session[:user_id]), method: :post, class: "btn btn-primary" %></li>
            <% else %>
-             <%= link_to "Log In", login_path %>
+             <li><%= link_to "Log In", login_path, class: "btn btn-primary" %></li>
            <% end %>
           </li>
         </ul>
