--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -7,5 +7,25 @@ Published: <%= @work.publication_year %><br>
 <%= link_to "Upvote", work_votes_path(@work.id), method: :post, class: "btn btn-primary" %>  
 <%= link_to "Delete", work_path(@work), method: :delete, data: { confirm: "Are you sure you want to delete this work?" } %> <br>
 
-<%= @work.votes.length %> Votes for this movie <br>
-Table of Votes goes here
+<h2><%= @work.votes.length %> Votes for this movie</h2>
+
+<table class="table">
+    <thead>
+      <tr>
+        <th>User</th>
+        <th>Date</th>
+      </tr>
+    </thead>
+    <tbody>
+     <% @work.votes.each do |vote| %>
+       <tr>
+          <td>
+            <%= User.find_by(id: vote.user_id).username %>
+          </td>
+          <td>
+            <%= vote.created_at %>
+          </td>
+        </tr>
+        <% end %>
+    </tbody>
+</table>
