--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -18,7 +18,7 @@
      <% @albums.each do |album| %>
        <tr>
           <td>
-            Votes
+            <%= album.votes_count %>
           </td>
           <td>
             <%= link_to "#{album.title}", work_path(album.id) %>
@@ -53,7 +53,7 @@
      <% @books.each do |book| %>
        <tr>
           <td>
-            Votes
+            <%= book.votes_count %>
           </td>
           <td>
             <%= link_to "#{book.title}", work_path(book.id) %>
@@ -89,7 +89,7 @@
      <% @movies.each do |movie| %>
        <tr>
           <td>
-            Votes
+            <%= movie.votes_count %>
           </td>
           <td>
             <%= link_to "#{movie.title}", work_path(movie.id) %>
