--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -7,7 +7,7 @@ Published: <%= @work.publication_year %><br>
 <%= link_to "Upvote", work_votes_path(@work.id), method: :post, class: "btn btn-primary" %>  
 <%= link_to "Delete", work_path(@work), method: :delete, data: { confirm: "Are you sure you want to delete this work?" } %> <br>
 
-<h2><%= @work.votes.length %> Votes for this movie</h2>
+<h2><%= @work.votes.length %> Vote(s) for this movie</h2>
 
 <table class="table">
     <thead>
