--- a/app/views/works/show.html.erb
+++ b/app/views/works/show.html.erb
@@ -2,10 +2,10 @@
 Created by: <%= @work.creator %><br>
 Published: <%= @work.publication_year %><br>
 
-<%= link_to "Back to media ranks", root_path %>  
-<%= link_to "Edit", edit_work_path %>  
+<%= link_to "Back to media ranks", root_path, class: "btn btn-primary" %>  
+<%= link_to "Edit", edit_work_path, class: "btn btn-primary" %>  
 <%= link_to "Upvote", work_votes_path(@work.id), method: :post, class: "btn btn-primary" %>  
-<%= link_to "Delete", work_path(@work), method: :delete, data: { confirm: "Are you sure you want to delete this work?" } %> <br>
+<%= link_to "Delete", work_path(@work), method: :delete, data: { confirm: "Are you sure you want to delete this work?" }, class: "btn btn-danger" %> <br>
 
 <h2><%= @work.votes.length %> Vote(s) for this movie</h2>
 
