--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -6,7 +6,7 @@
   <body>
 
 <main>
-  <% if @media_spotlight %>
+  <% unless @media_spotlight.nil? %>
     <h2>Media Spotlight: <%= @media_spotlight.title%> by <%= @media_spotlight.creator%> </h2>
   <% else %>
     <h2>No Media Spotlight</h2>
