--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,39 @@
-???????????
+<main>
+
+  <h2>User Summary: <%= @user.username %> </h2>
+  <p>Joined site <%= @user.created_at %></p>
+
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Media Title &nbsp; &nbsp; &nbsp;</th>
+        <th>Created By</th>
+        <th>Published</th>
+        <th>Category</th>
+        <th>Voted On</th>
+      </tr>
+    </thead>
+    <tbody>
+     <% @user.votes.each do |vote| %>
+       <tr>
+          <td>
+            <%= link_to "#{Work.find_by(id: vote.work_id).title}", work_path(vote.work_id) %>
+          </td>
+          <td>
+            <%= Work.find_by(id: vote.work_id).creator %>
+          </td>
+          <td>
+            <%= Work.find_by(id: vote.work_id).publication_year %>
+          </td>
+          <td>
+            <%= Work.find_by(id: vote.work_id).category %>
+          </td>
+           <td>
+            <%= vote.created_at %>
+          </td>
+        </tr>
+        <% end %>
+    </tbody>
+  </table>
+
+</main>
