--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
            <%= link_to "Add new work", new_work_path %>
          </li>
          <li>
-           <%= link_to "View all users", root_path%>
+           <%= link_to "View all users", users_path%>
          </li>
         </ul>
         <ul class="user-nav-container">
