Add upvote button to works index.  All tests passing:

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -30,7 +30,7 @@
             <%= album.publication_year %>
           </td>
           <td>
-            Upvote
+            <%= link_to "Upvote", work_votes_path(album.id), method: :post, class: "btn btn-primary" %>  
           </td>
         </tr>
         <% end %>
@@ -65,7 +65,7 @@
             <%= book.publication_year %>
           </td>
           <td>
-            Upvote
+            <%= link_to "Upvote", work_votes_path(book.id), method: :post, class: "btn btn-primary" %>
           </td>
         </tr>
         <% end %>
@@ -101,7 +101,7 @@
             <%= movie.publication_year %>
           </td>
           <td>
-            Upvote
+            <%= link_to "Upvote", work_votes_path(movie.id), method: :post, class: "btn btn-primary" %>
           </td>
         </tr>
         <% end %>
